fixed page scaling on smaller screen sizes

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -36,3 +36,9 @@ body,
 input[type='file'] {
   color: transparent;
 }
+
+@media (max-width: 700px) {
+  html {
+    width: fit-content;
+  }
+}
