--- a/client/src/pages/home/Home.css
+++ b/client/src/pages/home/Home.css
@@ -5,5 +5,6 @@
     justify-content: center;
     padding-top: 150px;
     /* padding: 2px; */
-    /* border: 2px solid red; */
+    
+    width: 100%;
 }
